fixed projects page on smaller screens not displaying correctly.

--- a/src/style.css
+++ b/src/style.css
@@ -6,13 +6,6 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-
-}
-
 .background {
   background-color: #d7bea8;
 }
